Trying to fix navbar collapse to show up

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@
 /*---------------Mobile----------*/
 
 
-@media (min-width: 992px) {
+@media (max-width: 992px) {
 
     .navbar-toggler-icon{
 
